# WASM-demo

./: .env.example  .gitignore  BUILD.md  README.md  SECURITY.md  build-and-package.sh  build.ps1  build.sh  build_and_copy_viewer.sh  build_and_run_agent.ps1  build_and_run_agent.sh  index.html  package-viewer.sh  package.ps1  package.sh  release.sh
.github/workflows/: README.md  build-and-deploy.yml  build-and-release-viewer.yml  build-viewer.yml  build-wasm.yml  build-windows-x64.yml  manual-build-viewer.yml  release-viewer.yml
viewer/: README.md  USAGE.md  index.html  index.html.improved  package-config.sh  test-startup.sh
viewer/config/: platform.json
viewer/docs/: README.md  USAGE.md
viewer/pkg/: README.md  linux-wasm_agent.js  linux-wasm_agent.wasm  macos-wasm_agent.js  macos-wasm_agent.wasm  windows-x64-wasm_agent.js  windows-x64-wasm_agent.wasm
wasm-agent/: .gitignore  CHANGES.md  Cargo.toml  index.html
wasm-agent/src/: lib.rs
wasm-demo/: fix-package.py
