[package]
name = "wasm-agent"
version = "0.2.0"
edition = "2021"
description = "Multi-provider WebAssembly LLM Agent for browser execution"
license = "MIT"
authors = ["Your Name"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core WASM bindings
wasm-bindgen = "=0.2.92"
wasm-bindgen-futures = "=0.4.44"
js-sys = "=0.3.69"
web-sys = { version = "=0.3.69", features = ["Window", "Navigator", "Document", "Range", "Element", "HtmlInputElement", "HtmlSelectElement", "XmlHttpRequest"] }

# Serialization
serde = { version = "=1.0.197", features = ["derive"], default-features = false }
serde_json = { version = "=1.0.115", default-features = false }
serde-wasm-bindgen = "=0.6.5"

# Logging and error handling
console_error_panic_hook = "=0.1.7"
console_log = "=1.0.0"
log = "=0.4.21"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true

[profile.dev]
opt-level = 1