[package]
name = "wasm-agent"
version = "0.2.0"
edition = "2021"
description = "Multi-provider WebAssembly LLM Agent for browser execution"
license = "MIT"
authors = ["Your Name"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core WASM bindings — must all use the same wasm-bindgen minor series
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Error handling
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true

[profile.dev]
opt-level = 1